<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".AccountActivity">

    <TextView
        android:id="@+id/accountProcess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/account"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/userInfo"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="@+id/userInfo"
        app:layout_constraintTop_toBottomOf="@+id/userInfo" />

    <Button
        android:id="@+id/addStudent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="accountClick"
        android:text="@string/add_student"
        app:layout_constraintEnd_toEndOf="@+id/accountProcess"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/accountProcess"
        app:layout_constraintTop_toBottomOf="@+id/accountProcess"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/removeStudent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="accountClick"
        android:text="@string/remove_student"
        app:layout_constraintEnd_toEndOf="@+id/addStudent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/addStudent"
        app:layout_constraintTop_toBottomOf="@+id/addStudent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/editStudent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="accountClick"
        android:text="@string/edit_student"
        app:layout_constraintEnd_toEndOf="@+id/removeStudent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="@+id/removeStudent"
        app:layout_constraintTop_toBottomOf="@+id/removeStudent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/findStudents"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="accountClick"
        android:text="@string/find_students"
        app:layout_constraintEnd_toEndOf="@+id/editStudent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/editStudent"
        app:layout_constraintTop_toBottomOf="@+id/editStudent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/showAllStudents"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="accountClick"
        android:text="@string/show_all_students"
        app:layout_constraintEnd_toEndOf="@+id/findStudents"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/findStudents"
        app:layout_constraintTop_toBottomOf="@+id/findStudents"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/updatePassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="accountClick"
        android:text="@string/update_password"
        app:layout_constraintEnd_toEndOf="@+id/showAllStudents"
        app:layout_constraintStart_toStartOf="@+id/showAllStudents"
        app:layout_constraintTop_toBottomOf="@+id/showAllStudents"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/deleteAccount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="accountClick"
        android:text="@string/delete_account"
        app:layout_constraintEnd_toEndOf="@+id/updatePassword"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="@+id/updatePassword"
        app:layout_constraintTop_toBottomOf="@+id/updatePassword"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/exit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="accountClick"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="@+id/deleteAccount"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/deleteAccount"
        app:layout_constraintTop_toBottomOf="@+id/deleteAccount"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/userInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/user_info"
        android:textColor="#CC0E0E"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/accountInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/exit"
        app:layout_constraintStart_toStartOf="@+id/exit"
        app:layout_constraintTop_toBottomOf="@+id/exit"
        app:layout_constraintVertical_bias="0.22" />

</androidx.constraintlayout.widget.ConstraintLayout>