<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/logInProcess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/log_in"
        android:textColor="#673AB7"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:autofillHints="enterUsername"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/logInProcess"
        app:layout_constraintStart_toStartOf="@+id/logInProcess"
        app:layout_constraintTop_toBottomOf="@+id/logInProcess" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="enterPassword"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="5dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/usernameLogin"
        app:layout_constraintStart_toStartOf="@+id/usernameLogin"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogin" />

    <Button
        android:id="@+id/enterBtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:onClick="enterClick"
        android:text="@string/enter"
        app:layout_constraintEnd_toEndOf="@+id/passwordLogin"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/passwordLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/loginInfo"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginTop="30dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/enterBtnLogin"
        app:layout_constraintStart_toStartOf="@+id/enterBtnLogin"
        app:layout_constraintTop_toBottomOf="@+id/enterBtnLogin" />

    <Button
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:onClick="forgotClick"
        android:text="@string/forgot_password"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enterBtnLogin"
        app:layout_constraintTop_toBottomOf="@+id/loginInfo"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SmallSp,UsingOnClickInXml" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="15dp"
        android:text="@string/show"
        android:textColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/enterBtnLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>