<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:backgroundTint="#FFFFFF"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/forgotPasswordProcess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="2dp"
        android:text="@string/forgot_password"
        android:textColor="#673AB7"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameForgot"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordProcess" />

    <Button
        android:id="@+id/findBtnForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:onClick="findClickForgot"
        android:text="@string/find"
        app:layout_constraintStart_toEndOf="@+id/usernameForgot"
        app:layout_constraintTop_toTopOf="@+id/usernameForgot"
        tools:ignore="UsingOnClickInXml" />

    <EditText
        android:id="@+id/newPassword1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="enterNew_1"
        android:background="@drawable/back"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/usernameForgot"
        app:layout_constraintStart_toStartOf="@+id/usernameForgot"
        app:layout_constraintTop_toBottomOf="@+id/usernameForgot" />

    <EditText
        android:id="@+id/newPassword2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="enterNew_2"
        android:background="@drawable/back"
        android:hint="@string/again"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/newPassword1"
        app:layout_constraintStart_toStartOf="@+id/newPassword1"
        app:layout_constraintTop_toBottomOf="@+id/newPassword1" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchForgot"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/back"
        android:backgroundTint="#FFFFFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textColor="#000000"
        android:textOff="S"
        android:textOn="H"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/newPassword1"
        app:layout_constraintTop_toTopOf="@+id/newPassword1"
        app:showText="true"
        app:trackTint="#92999A" />

    <Button
        android:id="@+id/changerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="changeClick"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordProcess"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordProcess"
        app:layout_constraintTop_toBottomOf="@+id/newPassword2"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/forgotInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordProcess"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordProcess"
        app:layout_constraintTop_toBottomOf="@+id/newPassword2" />

</androidx.constraintlayout.widget.ConstraintLayout>