<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".FindStudentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/findStudentProcess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/find_students"
            android:textColor="@color/purple_500"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/textFind"
                android:layout_width="273dp"
                android:layout_height="48dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/back"
                android:hint="@string/enter_name_surname_classname_or_id"
                android:inputType="textPersonName"
                android:paddingStart="5dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="15sp" />

            <Button
                android:id="@+id/findBtnFind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:onClick="findClickFind"
                android:text="@string/find"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

        <TextView
            android:id="@+id/findInfo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>